--- a/config.yml
+++ b/config.yml
@@ -4,9 +4,9 @@ steps_date:
       future: 1
       lag: 1
     RNN:
-      units: [1]
-      n_hidden: 0
-      lr: 0.0001
+      units: [64, 128, 1]
+      n_hidden: 2
+      lr: 0.004
       m_batch_size: 8
     LSTM:
       units: [1]
@@ -16,7 +16,7 @@ steps_date:
     BLSTM:
       units: [16, 128, 256]
       n_hidden: 2
-      lr: 0.005
+      lr: 0.0055
       m_batch_size: 8
     GRU:
       units: [1]
@@ -39,24 +39,24 @@ steps_hour:
       future: 24
       lag: 24
     RNN:
-      units: [1]
+      units: [24]
       n_hidden: 0
-      lr: 0.01
+      lr: 0.008
       m_batch_size: 16
     LSTM:
-      units: [1]
+      units: [24]
       n_hidden: 0
-      lr: 0.0001
+      lr: 0.008
       m_batch_size: 16
     BLSTM:
-      units: [1]
+      units: [24]
       n_hidden: 0
-      lr: 0.0001
+      lr: 0.008
       m_batch_size: 16
     GRU:
-      units: [1]
+      units: [24]
       n_hidden: 0
-      lr: 0.0001
+      lr: 0.008
       m_batch_size: 16
     ConvLSTM:
       units: 
@@ -72,24 +72,24 @@ augmented_steps_date:
   models:
     Baseline:
     RNN:
-      units: [1]
+      units: [128]
       n_hidden: 0
-      lr: 0.01
+      lr: 0.0012
       m_batch_size: 8
     LSTM:
-      units: [1]
-      n_hidden: 0
-      lr: 0.0001
+      units: [1, 1, 16]
+      n_hidden: 2
+      lr: 0.008
       m_batch_size: 8
     BLSTM:
-      units: [1]
+      units: [128]
       n_hidden: 0
-      lr: 0.0001
+      lr: 0.006
       m_batch_size: 8
     GRU:
-      units: [1]
+      units: [128]
       n_hidden: 0
-      lr: 0.0001
+      lr: 0.0012
       m_batch_size: 8
     ConvLSTM:
       units: 1
